[package]
name = "vfs-async"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures-core = "0.3"
futures-io = "0.3"
futures-util = { version = "0.3", features = [ "io" ] }
pathutils = { git = "https://github.com/kildevaeld/pathutils-rs.git" }
tokio = { version = "0.2", features = [ "fs" ], optional = true }
pin-project = "0.4"
globset = { version = "^0.4", optional = true }


[features]
default = [ "tokio", "glob" ]
glob = ["globset", "pathutils/glob"]


[dev-dependencies]
tokio = { version = "0.2", features = [ "full" ] }
