[package]
name = "vfs-async"
version = "0.1.0"
authors = ["Rasmus Kildevæld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", default-features = false, features = [ "std" ] }
pathutils = { git = "https://github.com/kildevaeld/pathutils-rs.git" }
pin-project = { version = "1", optional = true }
async-fs = { version = "1", optional = true }
blocking = { version = "1", optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = [ "std", "executor" ] }


[features]
default = [ "boxed", "memory", "fs" ]
boxed = [ "pin-project" ]
memory = [  ]
fs = [ "async-fs", "blocking" ]