[package]
name = "vfs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = { path = "../vfs", features = ["async", "std"] }
vfs-tokio = { path = "../vfs-tokio" }
tokio = { version = "1", features = ["fs", "macros", "rt"] }
